[project]
name = "apt-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.12",
    "python-telegram-bot>=22,<23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
